--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -3,6 +3,6 @@
 
 <div class="row">
     <div class="col">
-        <app-grafica-barra-horizontal></app-grafica-barra-horizontal>
+        <app-grafica-barra-horizontal [results] = juegos></app-grafica-barra-horizontal>
     </div>
 </div>
